--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: CheckMirrors
+title: checkmirrors
 timezone: UTC
 collections:
   posts:
@@ -16,9 +16,7 @@ defaults:
     img-url: ''
     categories: Testimonials
 email: checkmirrors@gmail.com
-description: checkmirrors school of motoring. Learn to drive in Yorkshire. Driving
-  lessons from qualified instructors. From just £25 per hour. Pass plus options. York
-  and Leeds.
+description: checkmirrors school of motoring. Learn to drive in Yorkshire. Driving lessons from qualified instructors. From just £25 per hour. Pass plus options. York Leeds & Wakefield.
 baseurl: ''
 url: http://www.checkmirrors.co.uk
 markdown: kramdown
