--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
     img-url: ''
     categories: Testimonials
 email: checkmirrors@gmail.com
-description: York driving instructors, checkmirrors, is a School of Motoring based in Yorkshire with over 14 years experience. Book today from just £25 per hour, Pass Plus options available in York, Leeds & Wakefield.
+description: York driving instructors, checkmirrors, is a School of Motoring based in Yorkshire with over 14 years experience. Book today from just £25 per hour with Pass Plus options available in York, Leeds & Wakefield.
 baseurl: ''
 url: http://www.checkmirrors.co.uk
 markdown: kramdown
