--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ email: checkmirrors@gmail.com
 description: York driving instructors, checkmirrors, is a School of Motoring based
   in York with over 14 years experience. Book today from just £25 per hour with Pass
   Plus options available in York.
-baseurl: 
-url: http://www.checkmirrors.co.uk
+baseurl:
+url: https://www.checkmirrors.co.uk
 markdown: kramdown
-year: 
-pass-date: 
+year:
+pass-date:
