--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ defaults:
     categories: Testimonials
 email: checkmirrors@gmail.com
 description: York driving instructors, checkmirrors, is a School of Motoring based
-  in York with over 14 years experience. Book today from just £28 per hour or £270
-  for 10 lessons. We also have Pass Plus options available in York.
-pricePerLesson: "£28"
-priceForTen: "£270"
+  in York with over 14 years experience. Book today from just £30 per hour or £285
+  for 10 lessons. We also have Pass Plus options available in York from £220.
+pricePerLesson: "£30"
+priceForTen: "£285"
 passPlusPrice: "£220"
-baseurl: 
+baseurl:
 url: https://www.checkmirrors.co.uk
 markdown: kramdown
-year: 
-pass-date: 
+year:
+pass-date:
 include:
 - ".htaccess"
