--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,7 +1,7 @@
 ---
 new_page_extension: md
 auto_deploy: false
-admin_path:
+admin_path: "/admin"
 webhook_url:
 sections:
 - type: jekyll-pages
@@ -31,4 +31,3 @@ build:
   working_dir: "/srv"
   instant_preview_command: bundle exec jekyll serve --drafts --unpublished --future
     -d _site
----
