--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,7 +2,7 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/admin"
-webhook_url: 
+webhook_url:
 sections:
 - type: jekyll-pages
   label: Pages
@@ -23,7 +23,8 @@ sections:
 - type: document
   path: config.yml
   label: data
-  match: "**/*"
+  match: "*.yml"
+  new_doc_ext: ".yml"
 - type: document
   path: index.html
   label: Home Page
