--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ defaults:
     year: ''
     categories: Testimonials
 email: checkmirrors@gmail.com
-description: Learn to drive in York with checkmirrors driving instructors. Female Instructors, NHS Discount & Pass Plus options available in York. We are fully COVID secure.
+description: Learn to drive in York and the surrounding area. Female Instructors, NHS Discount & Pass Plus options available in York. We are fully COVID secure.
 pricePerLesson: "£28"
 priceForTen: "£270"
 passPlusPrice: "£220"
